--- a/Frontend/css/Header.css
+++ b/Frontend/css/Header.css
@@ -1,5 +1,5 @@
 .headerContainer {
-    background-color: rgb(215, 215, 215);
+    background-color: #4CC9F0;
     box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
 
 }
