--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -1,12 +1,13 @@
 html {
   box-sizing: border-box;
-height: 100vh;
 }
 #root {
   margin: 0 auto;
   text-align: center;
 }
 
-body {
-  padding-top: 80px; 
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
