--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -1,12 +1,14 @@
 html {
   box-sizing: border-box;
 }
+
 #root {
   margin: 0 auto;
   text-align: center;
 }
 
-html, body {
+html,
+body {
   height: 100%;
   margin: 0;
   padding: 0;
