--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
 
 
-body{
-      font-family: "Comfortaa", sans-serif !important;
+body {
+  font-family: 'Inter', sans-serif;
 }
