--- a/Frontend/src/css/FavoriteProductCard.css
+++ b/Frontend/src/css/FavoriteProductCard.css
@@ -4,3 +4,14 @@
   max-width: 280px;
   flex: none !important;
 }
+
+.product-name {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  min-height: 3em; 
+  line-height: 1.5em; 
+  margin-bottom: 0.5rem;
+}
